--- a/helm/main.yaml
+++ b/helm/main.yaml
@@ -66,15 +66,18 @@ ingress:
         cert-manager.io/cluster-issuer: "letsencrypt-prod"
         kubernetes.io/tls-acme: "true"
     hosts:
-        - host: chatbot.farmhub.asia
+        - host: wnc-chatbot.farmhub.asia
           paths:
               - path: "/"
     tls:
-        - secretName: farmhub-chatbot-tls
+        - secretName: farmhub-wnc-chatbot-tls
           hosts:
-              - chatbot.farmhub.asia
+              - wnc-chatbot.farmhub.asia
 
-configmap: {}
+configmap:
+    PORT: 8080
+    MY_VERIFY_FB_TOKEN: mystringtoken
+    FB_PAGE_TOKEN: EAADZA5eYVKDsBAGK0csLlFINxNfHqxRcyZCEFKAwsHbVKZAUt0uEGxgEuSYPZCGZAUPvvDm7idzUOz9hbsxptdQtI4USKqGhEXkT9aXTJuZAvITfq0lpwHgYj3lp8RtF5AJNlLxFy5GawqEelmQj27iGu7B5tC5wLjgxknR9vBmtPNXADr6wki
 
 
 resources:
