--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "nodejs",
     "witAI"
   ],
-  "author": "Hary Pham",
+  "author": "Farm Hub team",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
