--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,9 +1,10 @@
-apiVersion: skaffold/v2beta10
+apiVersion: skaffold/v2beta19
 kind: Config
 build:
   tagPolicy:
-    envTemplate:
-      template: "{{.IMAGE_NAME}}:{{.CI_COMMIT_SHORT_SHA}}"
+    gitCommit:
+      variant: "AbbrevCommitSha"
+      ignoreChanges: true
   artifacts:
   - image: <FULLREPO>
     kaniko:
