--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,11 @@ variables:
   HELM_VALUE: $CI_COMMIT_REF_NAME
   HELM_VERSION: 1.6.0
   FULLREPO: gcr.io/farmhub-320109/$IMAGE-$CI_COMMIT_REF_NAME
+  CHART_NAME: deploychart
 
 .predeploy: &predeploy |
-  helm repo add farmhub gs://farmhub-core-helmcharts/deploychart
-  helm pull farmhub/helm-template --untar=true --version $HELM_VERSION
+  helm repo add farmhub-core gs://farmhub-core-helmcharts/$CHART_NAME
+  helm pull farmhub-core/$CHART_NAME --untar=true --version $HELM_VERSION
 
 .replace_helm: &replace_helm |
   sed -i "s|<IMAGE>|$FULLREPO:$CI_COMMIT_SHORT_SHA|g" helm/$HELM_VALUE.yaml
